...
    val Pause: Int = R.drawable.ic_tv_pause
    val Save: Int = R.drawable.ic_tv_save
    val Settings: Int = R.drawable.ic_tv_settings
    val Delete: Int = R.drawable.ic_tv_delete
    val Close: Int = R.drawable.ic_tv_close
    val Channels: Int = R.drawable.ic_tv_channels
    val Target: Int = R.drawable.ic_tv_target
    val Guide: Int = R.drawable.ic_tv_guide
    val Epg: Int = R.drawable.ic_tv_epg
    val Info: Int = R.drawable.ic_tv_info
    val Search: Int = R.drawable.ic_tv_search
    val Replay: Int = R.drawable.ic_tv_replay
    val Forward: Int = R.drawable.ic_tv_forward
...
